[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/VoiceInstructor.gd" type="Script" id=1]
[ext_resource path="res://audio/instruction_keep_it_up.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/instruction_gogogo.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/instruction_go_for_it.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/instruction_faster.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/instruction_thats_the_spirit.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/instruction_you_are_on_a_roll.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/instruction_knees_higher.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/instruction_falling_behind.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/instruction_pulled_ahead.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/instruction_very_good.wav" type="AudioStream" id=11]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="keep_it_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Voice"

[node name="go_for_it" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Voice"

[node name="go_go_go" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Voice"

[node name="very_good" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Voice"

[node name="thats_the_spirit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Voice"

[node name="you_are_on_a_roll" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Voice"

[node name="faster" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Voice"

[node name="pulled_ahead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Voice"

[node name="falling_behind" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Voice"

[node name="i_want_to_see_those_knees_higher" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Voice"
